changed AppBar to fixed so a user can navigate pages even while scrolling down the list, added padding so movies arent covered up

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,4 +7,5 @@
   align-items: center;
   justify-content: flex-start;
   font-size: calc(10px + 2vmin);
+  padding-top: 52px; /* this keeps the top movies from being covered by the fixed navbar */
 }
